tests/snapshots/mlir__core_unit.snap
---
source: tests/mlir.rs
expression: output
---
module {
  func.func @main() {
    %c10_i32 = arith.constant 10 : i32
    return
  }
}
